--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,9 +57,22 @@ figure {
         border-radius: 20px;
         box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
-        font-size: 30px; }
+        align-content: center;
+        font-size: 40px; }
+        figure section article .inner .pic {
+          width: 200px;
+          height: 200px;
+          overflow: hidden;
+          border-radius: 50%;
+          margin-bottom: 30px; }
+          figure section article .inner .pic img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; }
+        figure section article .inner h2 {
+          font: 24px/1 "arial" #555; }
   figure > p {
     position: absolute;
     bottom: 7vh;
