--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,39 +1,64 @@
 @charset "UTF-8";
-@import 'reset';
+@import "reset";
 
-figure{
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(45deg, hotpink, violet);
+figure {
+	width: 100%;
+	height: 100vh;
+	background: linear-gradient(45deg, hotpink, violet);
 
-    @import "header";
+	@import "header";
 
-    section{
-        width: 300px; height: 450px;
-        position: absolute;
-        top: 50%; left: 50%;
-        margin-left: -160px;
-        margin-top: -220px;
+	section {
+		width: 300px;
+		height: 450px;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		margin-left: -160px;
+		margin-top: -220px;
 
-        article{
-            width: 100%; height: 100%;
-            position: absolute;
-            top: 0; left: 0;
+		article {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
 
-            .inner{
-                width: 100%; height: 100%;
-                background: rgba(255,255,255, .7);
-                position: absolute;
-                top: 0; left: 0;
-                border-radius: 20px;
-                box-shadow: 10px 10px 20px rgba(0,0,0,.1);
-                display: flex; 
-                justify-content: center;
-                align-items: center;
-                font-size: 30px;
-            }
-        }
-    }
+			.inner {
+				width: 100%;
+				height: 100%;
+				background: rgba(255, 255, 255, 0.7);
+				position: absolute;
+				top: 0;
+				left: 0;
+				border-radius: 20px;
+				box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: center;
+				align-content: center;
+				font-size: 40px;
 
-    @import "footer";
+				.pic {
+					width: 200px;
+					height: 200px;
+					overflow: hidden;
+					border-radius: 50%;
+					margin-bottom: 30px;
+
+					img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+					}
+				}
+
+				h2 {
+					font: 24px/1 "arial" #555;
+				}
+			}
+		}
+	}
+
+	@import "footer";
 }
