--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,9 @@ a {
 figure {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(45deg, hotpink, violet); }
+  background: linear-gradient(45deg, hotpink, violet);
+  position: relative;
+  overflow: hidden; }
   figure h1 {
     position: absolute;
     top: 7vh;
@@ -35,9 +37,9 @@ figure {
     color: #fff; }
   figure section {
     width: 300px;
-    height: 450px;
+    height: 500px;
     position: absolute;
-    top: 50%;
+    top: 150%;
     left: 50%;
     margin-left: -160px;
     margin-top: -220px; }
@@ -60,7 +62,7 @@ figure {
         flex-wrap: wrap;
         justify-content: center;
         align-content: center;
-        font-size: 40px; }
+        padding: 40px; }
         figure section article .inner .pic {
           width: 200px;
           height: 200px;
@@ -72,7 +74,8 @@ figure {
             height: 100%;
             object-fit: cover; }
         figure section article .inner h2 {
-          font: 24px/1 "arial" #555; }
+          font: 24px/1 "arial";
+          color: #555; }
   figure > p {
     position: absolute;
     bottom: 7vh;
