--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,14 +5,16 @@ figure {
 	width: 100%;
 	height: 100vh;
 	background: linear-gradient(45deg, hotpink, violet);
+	position: relative;
+	overflow: hidden;
 
 	@import "header";
 
 	section {
 		width: 300px;
-		height: 450px;
+		height: 500px;
 		position: absolute;
-		top: 50%;
+		top: 150%;
 		left: 50%;
 		margin-left: -160px;
 		margin-top: -220px;
@@ -37,7 +39,7 @@ figure {
 				flex-wrap: wrap;
 				justify-content: center;
 				align-content: center;
-				font-size: 40px;
+				padding: 40px;
 
 				.pic {
 					width: 200px;
@@ -54,7 +56,8 @@ figure {
 				}
 
 				h2 {
-					font: 24px/1 "arial" #555;
+					font: 24px/1 "arial";
+					color: #555;
 				}
 			}
 		}
